[gd_scene load_steps=2 format=3 uid="uid://bks7gor6yrlx6"]

[ext_resource type="Script" uid="uid://dnwog7r8e5n51" path="res://scripts/pause_menu.gd" id="1_hdmo1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hdmo1")

[node name="MenuButton" type="Button" parent="."]
offset_left = 14.0
offset_top = 18.0
offset_right = 110.0
offset_bottom = 49.0
text = "Main Menu"

[node name="MainMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -20.0
offset_right = 35.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="Options" type="Button" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="Controls" type="Button" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Controls"

[node name="Exit" type="Button" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"

[node name="OptionsMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 129.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="HoldGlide" type="CheckButton" parent="OptionsMenu"]
layout_mode = 2
text = "Hold to Glide"

[node name="HoldHover" type="CheckButton" parent="OptionsMenu"]
layout_mode = 2
text = "Hold to Hover"

[node name="HoverLeave" type="CheckButton" parent="OptionsMenu"]
layout_mode = 2
button_pressed = true
text = "Automatically Hover when taking off"

[node name="ControlsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -119.0
offset_right = 367.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back2" type="Button" parent="ControlsMenu"]
layout_mode = 0
offset_left = 126.0
offset_top = -46.0
offset_right = 171.0
offset_bottom = -15.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[node name="Label" type="Label" parent="ControlsMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -238.0
offset_top = 51.0
offset_right = -22.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 0
text = "Shift + Ctrl + C: Debug Menu"

[node name="FlyingMovement" type="VBoxContainer" parent="ControlsMenu"]
layout_mode = 0
offset_left = 129.0
offset_top = -11.0
offset_right = 469.0
offset_bottom = 227.0

[node name="Flying" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "Flying"
uppercase = true

[node name="PitchUp" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "W: Pitch Up"

[node name="TurnLeft" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "A: Turn Left"

[node name="PitchDown" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "S: Pitch Down"

[node name="TurnRight" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "D: Turn Right
"

[node name="Flap" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "Spacebar: Flap wings (hold for stronger flap)"

[node name="Glide" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "Left Shift: Glide"

[node name="Hover" type="Label" parent="ControlsMenu/FlyingMovement"]
layout_mode = 2
text = "Left Ctrl: Hover"

[node name="GroundedMovement" type="VBoxContainer" parent="ControlsMenu"]
layout_mode = 0
offset_left = 473.0
offset_top = -11.0
offset_right = 594.0
offset_bottom = 227.0

[node name="Walking" type="Label" parent="ControlsMenu/GroundedMovement"]
layout_mode = 2
text = "Walking"
uppercase = true

[node name="MoveUp" type="Label" parent="ControlsMenu/GroundedMovement"]
layout_mode = 2
text = "A: Move Left
D: Move Right

Spacebar: Jump"

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="MainMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MainMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OptionsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="OptionsMenu/HoldGlide" to="." method="_on_hold_glide_toggled"]
[connection signal="toggled" from="OptionsMenu/HoldHover" to="." method="_on_hold_hover_toggled"]
[connection signal="toggled" from="OptionsMenu/HoverLeave" to="." method="_on_hover_leave_toggled"]
[connection signal="pressed" from="ControlsMenu/Back2" to="." method="_on_back_pressed"]
